Updated login and register template

--- a/frontend/css/custom-bootstrap.scss
+++ b/frontend/css/custom-bootstrap.scss
@@ -333,3 +333,10 @@ nav.year-navigation .page-item {
   margin-bottom: 4px;
   border-bottom: 1px solid $primary;
 }
+
+/* Login and register*/
+.content-section {
+  margin: auto;
+  padding: auto;
+  display: inline;
+}
