User profile updated to fit requirements

--- a/frontend/css/custom-bootstrap.scss
+++ b/frontend/css/custom-bootstrap.scss
@@ -340,3 +340,7 @@ nav.year-navigation .page-item {
   padding: auto;
   display: inline;
 }
+/*User profile*/
+.asteriskField {
+  display: none;
+}
