--- a/templates/participants.html
+++ b/templates/participants.html
@@ -16,19 +16,20 @@
               <th data-visible="false" data-searchable="false" data-orderable="true">Data Urodzenia</th>
               <th data-visible="{% if is_all_people %}false{% else %}true{% endif %}" data-searchable="false" data-orderable="true">Pełnoletni</th>
               <th data-visible="{% if is_all_people %}true{% else %}false{% endif %}" data-searchable="true"  data-orderable="true">Email</th>
-              <th data-visible="false" data-searchable="true"  data-orderable="true">Szkoła</th>
-              <th data-visible="false" data-searchable="false" data-orderable="true">Rok Matury</th>
+              <th data-visible="false" data-searchable="false" data-orderable="true">Numer telefonu</th>
+              <th data-visible="false" data-searchable="true"  data-orderable="true">Uniwersytet</th>
+              <th data-visible="false" data-searchable="false" data-orderable="true">Faktura</th>
               {% if not is_all_people %}
               <th data-visible="true"  data-searchable="false" data-orderable="true">Punkty</th>
               <th data-visible="false" data-searchable="false" data-orderable="true" data-toggle="tooltip" data-container="body" data-placement="top" title="Liczba zapisanych">L.zap.</th>
               <th data-visible="false" data-searchable="false" data-orderable="true" data-toggle="tooltip" data-container="body" data-placement="top" title="Liczba przesłanych rozwiązań">L.rozw.</th>
               <th data-visible="false" data-searchable="false" data-orderable="true" data-toggle="tooltip" data-container="body" data-placement="top" title="Liczba sprawdzonych rozwiązań">L.spr.rozw.</th>
               <th data-visible="false" data-searchable="false" data-orderable="true" data-toggle="tooltip" data-container="body" data-placement="top" title="Liczba zakwalifikowanych">L.zak.</th>
-              <th data-visible="true"  data-searchable="false" data-orderable="true" data-toggle="tooltip" data-container="body" data-placement="top" title="List motywacyjny uzupełniony?">List?</th>
+              <th data-visible="true"  data-searchable="false" data-orderable="true" data-toggle="tooltip" data-container="body" data-placement="top" title="Jest referującym?">Referujący?</th>
+              <th data-visible="true"  data-searchable="false" data-orderable="true" data-toggle="tooltip" data-container="body" data-placement="top" title="Abstrakt uzupełniony?">Abstrakt?</th>
               <th data-visible="true"  data-searchable="false" data-orderable="true">Status</th>
               {% endif %}
               <th data-visible="true"  data-searchable="false" data-orderable="true">Poprzednie edycje</th>
-              <th data-visible="false" data-searchable="false" data-orderable="false">Skąd wiesz o WWW?</th>
               {% for question in form_questions %}
                 <th data-visible="false" data-searchable="{% if question.is_searchable %}true{% else %}false{% endif %}" data-orderable="{% if question.is_orderable %}true{% else %}false{% endif %}">{{ question.form.title }}: {{ question.title }}</th>
               {% endfor %}
@@ -57,10 +58,13 @@
                   {{ person.user.email | question_mark_on_empty_string }}
                 </td>
                 <td>
+                  {{ person.phone_number }}
+                </td>
+                <td>
                   {{ person.school }}
                 </td>
                 <td>
-                  {{ person.matura_exam_year | question_mark_on_none_value }}
+                  {{ person.invoice }}
                 </td>
                 {% if not is_all_people %}
                 <td data-order="{{ person.points | unlocalize }}">
@@ -87,9 +91,6 @@
                   {{ person.accepted_workshop_count }}
                 </td>
                 <td>
-                  {{ person.has_cover_letter | qualified_mark }}
-                </td>
-                <td>
                   {% if person.status == 'Z' %}
                     <span class="text-success font-weight-bolder"> {{ person.status_display }} </span>
                   {% elif person.status == 'O' %}
@@ -103,9 +104,6 @@
                 {% endif %}
                 <td data-order="{% for participation in person.participation_data reversed %}{{ participation.year }}:{% if participation.workshops %}2{% elif participation.status == 'Z' %}1{% else %}0{% endif %} {% endfor %}">
                     {% include '_pastParticipation.html' with participation_data=person.participation_data only %}
-                </td>
-                <td>
-                  {{ person.how_do_you_know_about }}
                 </td>
                 {% for answer in person.form_answers %}
                   <td title="Ostatnia modyfikacja: {% if answer %}{{ answer.last_changed }}{% else %}Nigdy{% endif %}"
