--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,7 @@
           <table class="table">
             <tbody>
               <tr>
-                <th class="w-25">Edycje WWW:</th>
+                <th class="w-25">Edycje OSSM:</th>
                 <td class="w-75">
                   {% include '_pastParticipation.html' with participation_data=participation_data only %}
                   {% if perms.wwwapp.change_workshop_user_profile %}
@@ -62,20 +62,8 @@
                 <td class="w-75">{{ profile.user.email }}
               </tr>
               <tr>
-                <th class="w-25">Płeć:</th>
-                <td class="w-75">{{ profile.get_gender_display }}
-              </tr>
-              <tr>
-                <th class="w-25">Szkoła lub uniwersytet:</th>
+                <th class="w-25">Uniwersytet:</th>
                 <td class="w-75">{{ profile.school }}
-              </tr>
-              <tr>
-                <th class="w-25">Rok matury:</th>
-                <td class="w-75">{{ profile.matura_exam_year }}
-              </tr>
-              <tr>
-                <th class="w-25">Skąd wie o WWW:</th>
-                <td class="w-75">{{ profile.how_do_you_know_about }}
               </tr>
             </tbody>
           </table>
@@ -99,7 +87,7 @@
         {% endif %}
 
         {% if lecturer_workshops %}
-          <h3>Prowadził{% if gender == 'F' %}a{% endif %} warsztaty:</h3>
+          <h3>Prowadził warsztaty:</h3>
           <ul>
             {% for workshop in lecturer_workshops %}
               <li>
@@ -134,11 +122,6 @@
         {% endif %}
 
         {% if profile %}
-          {% if profile.cover_letter %}
-            <hr/>
-            <h3>List motywacyjny</h3>
-            {{ profile.cover_letter | bleach }}
-          {% endif %}
 
           {% if profile_page %}
             <hr />
