--- a/templates/news.html
+++ b/templates/news.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load bleach_tags %}
+
 {% block content %}
     <h1>Aktualności</h1>
     {% for post in posts %}
@@ -11,11 +13,13 @@
                     <small class="text-muted">{{ post.date_posted|date:"j F Y H:i" }}</small>
                 </div>
                 {% if can_edit %}
-                    <h2><a class="post-title" href="{% url 'post_edit' post.name %}">{{ post.title }}</a></h2>
+                    <h2><a class="post-title" href="{% url 'post_edit' post.name %}">{{ post.title }}</a>
+                    </h2>
                 {% else %}
                     <h2><a class="post-title">{{ post.title }}</a></h2>
                 {% endif %}
-                <p class="post-content">{{ post.content }}</p>
+{#                <p class="post-content">{{ post.content }}</p>#}
+                {{ post.content }}
             </div>
         </article>
     {% endfor %}
