--- a/templates/login.html
+++ b/templates/login.html
@@ -17,17 +17,17 @@
       <div class="border-top pt-3 login-content">
           <small class="text-muted">
               Nie masz jeszcze konta? 
-              <a class="ml-2" href="#">Zarejestruj się.</a>
+              <a class="ml-2" href="{% url 'signup' %}">Zarejestruj się.</a>
           </small>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6" style="padding-bottom: 2em;">
-        {% include "_socialButton.html" with provider="facebook" next=request.GET.next only %}
-      </div>
-      <div class="col-md-6" style="padding-bottom: 2em;">
-        {% include "_socialButton.html" with provider="google-oauth2" next=request.GET.next only %}
-      </div>
+{#      <div class="col-md-6" style="padding-bottom: 2em;">#}
+{#        {% include "_socialButton.html" with provider="facebook" next=request.GET.next only %}#}
+{#      </div>#}
+{#      <div class="col-md-6" style="padding-bottom: 2em;">#}
+{#        {% include "_socialButton.html" with provider="google-oauth2" next=request.GET.next only %}#}
+{#      </div>#}
       {% if debug %}
       <div class="col-md-6" style="padding-bottom: 2em;">
         <a href="{% url 'admin:login' %}{% if request.GET.next %}?next={{ request.GET.next }}{% endif %}" class="btn btn-outline-primary" role="button" style="display: block; box-sizing: border-box; height: 52px; padding: 11px;">
