--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,11 +4,18 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+  <h2 class="heading text-center m-5">Rejestracja użytkownika</h2>
+  <div class="content-section">
     <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign up</button>
-  </form>
+      {% csrf_token %}
+          <fieldset class="form-group">
+              {{ form |crispy }}
+          </fieldset>
+          <div class="form-group">
+              <button class="btn btn-outline-primary btn-login"  type="submit">Zaloguj</button>
+          </div>
+    </form>
+  </div>
 {% endblock %}
 
 {% block script %}
