--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,12 @@
     <meta property="og:title" content="OSSM" />
     {% endif %}
 
-    <!-- <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}"> -->
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon-180x180.png' %}"> -->
-    <!-- <link rel="icon" type="image/png" sizes="512x512" href="{% static 'images/favicon-512x512.png' %}"> -->
-    <!-- <link rel="icon" type="image/png" sizes="192x192" href="{% static 'images/favicon-192x192.png' %}"> -->
-    <!-- <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}"> -->
-    <!-- <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}"> -->
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon-180x180.png' %}">
+    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'images/favicon-180x180.png' %}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'images/favicon-192x192.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
 
     <link href="{% static 'dist/main.css' %}" rel="stylesheet">
     <link href="{% static 'dist/fonts.css' %}" rel="stylesheet">
